--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,261 +1,214 @@
-/* Styles have been adjuste to match desired website color most template code has been adjusted */
-/* Cleaned up for easy reading in Phase 2 */
+/*Recoding and cleaning during phase 4 mostly just removing clutter and making everything look clean.*/
 
-/* This sets the block display to some elements of the page */
-header, nav, main, footer { display: block; }
+* { box-sizing: border-box; }
 
-/* This sets the background color and fonts to the bosy section */
-body { 
-	background-color: #8ED7D2;
-	font-family: Nunito, Poppins, sans-serif;
-	background-image: url(../images/background.png);
-	background-repeat: repeat;
-	background-size: 15%;
-}
-/* This is the ID tag name and information settings to be applied to the page when the tag link is added */
-#wrapper { 
-	width: 960px;
-    margin: auto;
-	background-color: #D7BA8C;
-	color: #1A1A1A;
-	box-shadow: 5px 5px 5px #000000;
-	text-align: center;
-	padding-bottom: 5px;
-	font-size: 20px;
-}
-/* Styled settings to be applied to h1 */ /* Will be changed most likely if not already applied */
- h1 {
-	background-image: url(images/logo.png);
-    background-repeat: no-repeat;
-    background-color: #F7B8D3;
-	height: 110px;
-	font-family: Fredoka, Poppins, sans-serif;
-	font-size: 4.5em;
-	padding-top: 20px;
-	text-shadow: 3px 3px 3px #90745D;
-	margin-bottom: 0;
-	color: #FFFFFF; /* Text color was changed to white */
+header, nav, main, footer { display: block; }/* Styles for Header, Nav, Main, and Footer */
+
+/*Styles for the Body*/
+body {
+    margin: 0;
+    background-color: #8ED7D2;
+    font-family: 'Nunito', 'Poppins', sans-serif;
+    background-image: url(../images/background.png);
+    background-repeat: repeat;
+    background-size: 15%;
 }
 
-/* Style settings to be applied to nav */
-nav { 
-	padding-top: 10px;
-	padding-bottom: 10px;
-	display: flex; /*This fixed issues with my nav stacking partially*/
-}
-
-/* This is the Margins for the nav section */
-nav a { 
-	margin: 0 7px;	
-}
-
-/* Specific style settings to the nav ul */
-nav ul {
-	text-align: center;
-	list-style-type: none; 
-    padding-left: 20px;
-	font-size: 1.75em;
-	font-family: Nunito, Helvetica, sans-serif; /*Changed to desired font */
-}
-
-/* Specific style settings to the nav li */
-nav li {
-	padding-bottom: 5px;
-	font-weight: bold;
-}
-
-/* nav links style color settings */ /* I adjusted the nav to desired colors */
-nav a:link { color: #0000FF; }
-nav a:visited{ color: #800080; }
-nav a:hover { color: #FF4500; }
-
-/* Applies desired styles to the main */
-main {
-	background-color: #8ED7D2;
-	padding: 1px 20px 20px 20px;   
-	min-height: 300px;
-}
-
-/* Applies to the main img style settings */
-main img {
-	float: right;
-	padding: 20px;
-}
-
-/* Applies styles to the footer */
-footer {
-	background-color: #8FBF7B;
-    padding: 20px;
+/*Styles for the Wrapper Div*/
+#wrapper {
+    width: 960px;
+    max-width: 95%;
+    margin: 0 auto;
+    background-color: #D7BA8C;
+    color: #1A1A1A;
+    box-shadow: 5px 5px 15px rgba(0,0,0,0.4);
     text-align: center;
-	font-size: small;
-	font-style: italic;
+    padding-bottom: 20px;
+    font-size: 20px;
 }
 
-/* These settings will be applied to the different texts of the page */
-h2 {
-	margin-left: auto;
+/* Header */
+h1 {
+    background-image: url(../images/logo.png);
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-color: #F7B8D3;
+    background-size: 110px;
+    height: 140px;
+    font-family: 'Fredoka', sans-serif;
+    font-size: 4.5em;
+    padding-top: 40px;
+    text-shadow: 3px 3px 3px #90745D;
+    margin: 0;
+    color: #FFFFFF;
 }
 
-/* Paragraph settings */
-p {
-	font-family: Quicksand, Nunito, sans-serif;
-	text-align: left;
+/* Navigation – Desktop */
+nav {
+    background-color: #F7B8D3;
+    padding: 15px 0;
 }
 
-/* Area bellow is the neccessary code used to create a dropdown option for my room options. Content was found and heavily adjusted from W3Schools examples to match desired outcome for navigation layout*/
-/* Dropdown button */
-.dropdown .dropbtn {
-  font-size: 20px;
-  border: none;
-  color: #0000FF;
-  background-color: inherit;
-  font-family: inherit;
+.nav-desktop {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    font-size: 1.75em;
 }
 
-/* Dropdown content (hidden by default) */
+/*Dropdown Navigation*/
+nav a, .dropbtn {
+    color: #0000FF;
+    text-decoration: none;
+    padding: 8px 15px;
+    border-radius: 8px;
+    transition: all 0.3s;
+}
+
+
+nav a:hover, .dropbtn:hover {
+    background-color: #FF4500;
+    color: white !important;
+}
+
+nav a:visited { color: #800080; }
+
+/* Dropdown Settings for the Navigation*/
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropbtn {
+    background: none;
+    border: none;
+    font-size: inherit;
+    font-family: inherit;
+    cursor: pointer;
+    padding: 8px 15px;
+}
+
 .dropdown-content {
-  display: none;
-  position: relative; /* Helped to fix the Nav Layout issues */
-  background-color: #D7BA8C;
+    display: none;
+    position: absolute;
+    background-color: #D7BA8C;
+    min-width: 200px;
+    box-shadow: 0 8px 16px rgba(0,0,0,0.3);
+    z-index: 1000;
+    border-radius: 8px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
-/* Links inside the dropdown */
 .dropdown-content a {
-  padding: 5px;
-  display: block;
-  text-align: left;
+    padding: 12px 16px;
+    display: block;
+    text-align: left;
 }
 
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-  display: block;
+.dropdown:hover .dropdown-content { display: block; }
+
+/* Hamburger Menu added from help from W3C Schools to make navigation stack in a smaller screen (hidden on desktop) */
+.hamburger {
+    display: none;
+    font-size: 2em;
+    background: none;
+    border: none;
+    cursor: pointer;
+    color: #0000FF;
+    padding: 10px;
 }
 
-/* Styles for unordered lists */
-ul {
-	display: block;
-	text-align: left;
-	margin: auto;
-	font-size: .75em;
-	font-family: inherit;
+/* Main Content Styles*/
+main {
+    background-color: #8ED7D2;
+    padding: 20px;
+    min-height: 400px;
+    text-align: left;
 }
-/* Settings for my images to bring them in witht the div element */
-#exterior {
-	height: 400px; 
-	width: 300px; 
-	background-image: url(../images/bnbexterior.png); 
-	background-repeat: no-repeat; 
-	background-size: 100% 100%; 
-	float: right;
-	
+
+/* Images */
+/* This responsive image was created with help to fix issues with super large image on home page */
+.responsiveexterior {
+    float: right;
+    width: 500px;
+    margin: 20px;
+    border-radius: 15px;
+    box-shadow: 0 6px 15px rgba(0,0,0,0.4);
 }
-#kitchen {
-	height: 250px; 
-	width: 300px; 
-	background-image: url(../images/kitchen.png); 
-	background-repeat: no-repeat; 
-	background-size: 100% 100%; 
-	float: right;
-	margin-right: 10px;
-	
+/*Responsive element to allow photos to shrink and grow for most screen sizies credit from W3C Schools tutorial*/
+.responsive {
+    float: left;
+    width: 425px;
+    margin: 20px;
+    border-radius: 15px;
+    box-shadow: 0 6px 15px rgba(0,0,0,0.4);
 }
-#commons {
-	height: 250px; 
-	width: 300px; 
-	background-image: url(../images/commonroom.png); 
-	background-repeat: no-repeat; 
-	background-size: 100% 100%; 
-	float: right;
-	
+/* More responsive settings */
+.responsive,
+.responsiveexterior,
+.footer-logo {
+    max-width: 100%;
+    height: auto;
+    display: block;
 }
-#backyard {
-	height: 250px; 
-	width: 350px; 
-	background-image: url(../images/backyardpond.png); 
-	background-repeat: no-repeat; 
-	background-size: 100% 100%; 
-	float: right;
-	margin-top: 20px;
-	margin-bottom: 30px;
-	
+/* Clear to clear floats */
+.clear { clear: both; }
+
+/* Footer Styles*/
+footer {
+    background-color: #8FBF7B;
+    padding: 20px;
+    font-size: small;
+    font-style: italic;
+    clear: both;
 }
-#logo {
-	height: 100px; 
-	width: 100px; 
-	background-image: url(../images/bnblogo.png); 
-	background-repeat: no-repeat; 
-	background-size: 100% 100%; 
-	float: left;
+/* Responsive footer settings to keep small size on all screen sizes*/
+.footer-logo {
+    width: 50px;
+    height: 50px;
+    float: left;
+    margin-left: 30px;
+    margin-top: 10px;
 }
-#pinkieshideout {
-	height: 300px;
-	width: 400px;
-	background-image: url(../images/pinkieshideouti.png);
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
-	float: right;
-	margin-top: 10px;
+/* Media Querys made from examples of Javajam and small help from Grok to work properly when I struggled. The struggle was mostyl with cleaning it up and removing ineccessary code */
+/* It was super cluttered before grok helped clean it up */
+/* This one is a query for larger screens */
+@media (max-width: 1024px) {
+    #wrapper { width: 90%; }
+    h1 { font-size: 3.8em; height: 130px; padding-top: 35px; }
+    .responsive { width: 380px; }
+    .responsiveexterior { width: 450px; }
 }
-#midastouch {
-	height: 300px;
-	width: 400px;
-	background-image: url(../images/midastouch.png);
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
-	float: right;
-	margin-top: 10px;
+/* Query for meduim screen */
+@media (max-width: 768px) {
+    /* Switch to hamburger menu */
+    .hamburger { display: block; }
+    .nav-desktop { display: none; flex-direction: column; width: 100%; }
+    .nav-desktop.active { display: flex; }
+
+    h1 { font-size: 3em; height: 120px; padding-top: 30px; background-size: 90px; }
+
+    /* Images stack full-width */
+    .responsive, .responsiveexterior {
+        float: none;
+        width: 100%;
+        max-width: 500px;
+        margin: 20px auto;
+        display: block;
+    }
+
+    .footer-logo {
+        float: none;
+        display: block;
+        margin: 15px auto;
+    }
 }
-#coppersden {
-	height: 300px;
-	width: 400px;
-	background-image: url(../images/coppersden.png);
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
-	float: right;
-	margin-top: 10px;
-}
-#starrynight {
-	height: 300px;
-	width: 400px;
-	background-image: url(../images/starrynight.png);
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
-	float: right;
-	margin-top: 10px;
-}
-#reading {
-	height: 300px;
-	width: 400px;
-	background-image: url(../images/reading.png);
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
-	float: right;
-	margin-top: 10px;
-}
-#basement {
-	height: 300px;
-	width: 400px;
-	background-image: url(../images/basement.png);
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
-	float: right;
-	margin-top: 10px;
-}
-#gamenight {
-	height: 300px;
-	width: 400px;
-	background-image: url(../images/gamenight.png);
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
-	float: right;
-	margin-top: 10px;
-}
-#sundae {
-	height: 150px;
-	width: 200px;
-	background-image: url(../images/sundae.png);
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
-	float: left;
-	margin-top: 10px;
+
+/*Query for Small screen*/
+@media (max-width: 480px) {
+    h1 { font-size: 2.4em; height: 100px; padding-top: 25px; background-size: 70px; }
+    nav { padding: 10px; }
+    .dropdown-content { position: static; transform: none; box-shadow: none; }
 }
