--- a/styles/styles.css
+++ b/styles/styles.css
@@ -212,3 +212,18 @@ footer {
     nav { padding: 10px; }
     .dropdown-content { position: static; transform: none; box-shadow: none; }
 }
+
+/*This next area is for the video to work on different size screens */
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio */
+    height: 0;
+    overflow: hidden;
+}
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
